--- a/Servicio-tecnico-moviles-master/reparaciones/frmmodificarreparacion.html
+++ b/Servicio-tecnico-moviles-master/reparaciones/frmmodificarreparacion.html
@@ -6,8 +6,7 @@
             <legend>Modificar reparación</legend>
             <div class="form-group">
                 <label class="col-xs-4 control-label" for="repararDispositivo">Dispositivo</label>
-                <select class="form-control col-xs-4 input-md" id="repararDispositivo">
-					<option>Lista de dispositivos en reparación</option>
+                <select class="form-control col-xs-4 input-md" id="repararDispositivoModificar" name="repararDispositivoModificar">					
 			    </select>
             </div>
 
