--- a/Servicio-tecnico-moviles-master/reparaciones/frmbajareparacion.html
+++ b/Servicio-tecnico-moviles-master/reparaciones/frmbajareparacion.html
@@ -6,8 +6,7 @@
     <legend>Baja reparación</legend>
 		<div class="form-group">
 			<label class="col-xs-4 control-label" for="repararDispositivo">Dispositivo</label>
-			<select class="form-control col-xs-4 input-md" id="repararDispositivo">
-				<option>Lista de dispositivos en reparación</option>
+			<select class="form-control col-xs-4 input-md" id="repararDispositivoBaja" name="repararDispositivoBaja">
 			</select>
 		</div>
 
