menu dispositivos completamente funcional

--- a/Servicio-tecnico-moviles-master/dispositivos/frmbajadispositivo.html
+++ b/Servicio-tecnico-moviles-master/dispositivos/frmbajadispositivo.html
@@ -6,20 +6,12 @@
             <legend>Baja de Dispositivo</legend>
 
             <!-- Text input-->
-            <div class="form-group">
-                <label class="col-xs-4 control-label" for="marcaDispositivo">Marca del dispositivo</label>
+           <div class="form-group">
+                <label class="col-xs-4 control-label" for="idDispositivo">ID</label>
                 <div class="col-xs-4">
-                    <input id="marcaDispositivo" name="marcaDispositivo" placeholder="Marca" class="form-control input-md" required="" type="text">
+                    <input id="idDispositivo" name="idDispositivo" placeholder="ID" class="form-control input-md" required="" type="text">
                 </div>
             </div>
-			
-			<!-- Text input-->
-            <div class="form-group">
-                <label class="col-xs-4 control-label" for="modeloDispositivo">Modelo</label>
-                <div class="col-xs-4">
-                    <input id="modeloDispositivo" name="modeloDispositivo" placeholder="Modelo" class="form-control input-md" required="" type="text">
-                </div>
-			</div>
 
            <!-- Button -->
            <div class="form-group">
