--- a/Servicio-tecnico-moviles-master/dispositivos/frmmodificardispositivo.html
+++ b/Servicio-tecnico-moviles-master/dispositivos/frmmodificardispositivo.html
@@ -7,6 +7,13 @@
 
             <!-- Text input-->
             <div class="form-group">
+                <label class="col-xs-4 control-label" for="idDispositivo">ID</label>
+                <div class="col-xs-4">
+                    <input id="idDispositivo" name="idDispositivo" placeholder="ID" class="form-control input-md" required="" type="text">
+                </div>
+            </div>
+            
+            <div class="form-group">
                 <label class="col-xs-4 control-label" for="marcaDispositivo">Marca del dispositivo</label>
                 <div class="col-xs-4">
                     <input id="marcaDispositivo" name="marcaDispositivo" placeholder="Marca" class="form-control input-md" required="" type="text">
