Actualización general + Alta piezas (con error).

--- a/Servicio-tecnico-moviles-master/piezasderepuesto/frmaltapieza.html
+++ b/Servicio-tecnico-moviles-master/piezasderepuesto/frmaltapieza.html
@@ -7,9 +7,9 @@
 
             <!-- Text input-->
             <div class="form-group">
-                <label class="col-xs-4 control-label" for="idPieza">ID</label>
+                <label class="col-xs-4 control-label" for="numSerie">Número de serie</label>
                 <div class="col-xs-4">
-                    <input id="idPieza" name="idPieza" placeholder="ID" class="form-control input-md" required="" type="text">
+                    <input id="numSerie" name="numSerie" placeholder="Número de serie" class="form-control input-md" required="" type="text">
                 </div>
             </div>
 			
@@ -26,7 +26,21 @@
                 <div class="col-xs-4">
                     <input id="precioPieza" name="precioPieza" placeholder="Precio" class="form-control input-md" required="" type="text">
                 </div>
-            </div>            
+            </div>
+
+            <div class="form-group">
+                <label class="col-xs-4 control-label" for="idReparacion">ID de reparación</label>
+                <div class="col-xs-4">
+                    <input id="idReparacion" name="idReparacion" placeholder="ID de reparación" class="form-control input-md" required="" type="text">
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-xs-4 control-label" for="cifProveedor">CIF de proveedor</label>
+                <div class="col-xs-4">
+                    <input id="cifProveedor" name="cifProveedor" placeholder="CIF de proveedor" class="form-control input-md" required="" type="text">
+                </div>
+            </div>
 
             <!-- Button -->
             <div class="form-group">
