--- a/Servicio-tecnico-moviles-master/piezasderepuesto/frmaltapieza.html
+++ b/Servicio-tecnico-moviles-master/piezasderepuesto/frmaltapieza.html
@@ -30,9 +30,8 @@
 
             <div class="form-group">
                 <label class="col-xs-4 control-label" for="idReparacion">ID de reparación</label>
-                <div class="col-xs-4">
-                    <input id="idReparacion" name="idReparacion" placeholder="ID de reparación" class="form-control input-md" required="" type="text">
-                </div>
+                <select class="form-control col-xs-4 input-md" id="idReparacionAltaPieza" name="idReparacionAltaPieza">
+				</select>
             </div>
 
             <div class="form-group">
