--- a/Servicio-tecnico-moviles-master/piezasderepuesto/frmaltapieza.html
+++ b/Servicio-tecnico-moviles-master/piezasderepuesto/frmaltapieza.html
@@ -30,15 +30,14 @@
 
             <div class="form-group">
                 <label class="col-xs-4 control-label" for="idReparacion">ID de reparación</label>
-                <select class="form-control col-xs-4 input-md" id="idReparacionAltaPieza" name="idReparacionAltaPieza">
+                <select class="form-control col-xs-4 input-md" id="idReparacionAltaPieza" name="idReparacion">
 				</select>
             </div>
 
             <div class="form-group">
                 <label class="col-xs-4 control-label" for="cifProveedor">CIF de proveedor</label>
-                <div class="col-xs-4">
-                    <input id="cifProveedor" name="cifProveedor" placeholder="CIF de proveedor" class="form-control input-md" required="" type="text">
-                </div>
+                <select class="form-control col-xs-4 input-md" id="cifProveedor" name="cifProveedor">
+				</select>
             </div>
 
             <!-- Button -->
