--- a/Servicio-tecnico-moviles-master/piezasderepuesto/frmbajapieza.html
+++ b/Servicio-tecnico-moviles-master/piezasderepuesto/frmbajapieza.html
@@ -7,7 +7,7 @@
 
             <!-- Text input-->
             <div class="form-group">
-                <label class="col-xs-4 control-label" for="idPieza">ID</label>
+                <label class="col-xs-4 control-label" for="idPieza">Numero de serie</label>
                 <div class="col-xs-4">
                     <input id="idPieza" name="idPieza" placeholder="ID" class="form-control input-md" required="" type="text">
                 </div>
