--- a/Servicio-tecnico-moviles-master/reparaciones/frmaltareparacion.html
+++ b/Servicio-tecnico-moviles-master/reparaciones/frmaltareparacion.html
@@ -7,7 +7,7 @@
 			
 			 <!-- Text input-->
             <div class="form-group">
-                <label class="col-xs-4 control-label" for="idReparacion">Averia</label>
+                <label class="col-xs-4 control-label" for="idReparacion">ID reparacion</label>
                 <div class="col-xs-4">
                     <input id="idReparacion" name="idReparacion" placeholder="ID" class="form-control input-md" required="" type="text">
                 </div>
