--- a/Servicio-tecnico-moviles-master/reparaciones/frmmodificarreparacion.html
+++ b/Servicio-tecnico-moviles-master/reparaciones/frmmodificarreparacion.html
@@ -5,32 +5,18 @@
             <!-- Form Name -->
             <legend>Modificar reparación</legend>
             <div class="form-group">
-                <label class="col-xs-4 control-label" for="repararDispositivo">Dispositivo</label>
+                <label class="col-xs-4 control-label" for="repararDispositivo">ID</label>
                 <select class="form-control col-xs-4 input-md" id="repararDispositivoModificar" name="repararDispositivoModificar">
 			    </select>
             </div>
-
+			
             <!-- Text input-->
             <div class="form-group">
                 <label class="col-xs-4 control-label" for="averiaReparacion">Averia</label>
                 <div class="col-xs-4">
                     <input id="averiaReparacion" name="averiaReparacion" placeholder="Averia" class="form-control input-md" required="" type="text">
                 </div>
-			</div>
-
-            <div class="form-group">
-                <label class="col-xs-4 control-label" for="estadoReparacion">Estado de la reparacion</label>
-                <div class="col-xs-4">
-                   <input id="estadoReparacion" name="estadoReparacion" placeholder="Estado" class="form-control input-md" required="" type="text">
-                </div>
-			</div>
-				
-            <div class="form-group">
-               <label class="col-xs-4 control-label" for="importeReparacion">Importe presupuestado</label>
-				<div class="col-xs-4">
-					<input id="importeReparacion" name="importeReparacion" placeholder="Importe" class="form-control input-md" required="" type="text">
-                </div>
-			</div>
+			</div>                       
 					
             <div class="form-group">
 				<label for="col-xs-4 control-label comment">Comentarios</label>
