--- a/Servicio-tecnico-moviles-master/dispositivos/frmlistardispositivos.html
+++ b/Servicio-tecnico-moviles-master/dispositivos/frmlistardispositivos.html
@@ -18,7 +18,7 @@
                 <label class="col-xs-4 control-label" for="listadodispositivos"></label>
                 <div class="col-xs-4">
                     <input type="button" id="listadoDispositivos" name="listadoDispositivos" class="btn bg-success btn-primary" value="Aceptar" />
-					<input type="button" name="volver" class="btn bg-success btn-primary" value="Volver" />
+					<input type="button" name="volver" class="btn bg-success btn-primary" value="Volver" id="volverDispositivo"/>
                 </div>
             </div>
 
